Resolved problem with right-aligned text

--- a/YourHome.API/ClientApp/src/app/offer/offer-add/offer-add.component.css
+++ b/YourHome.API/ClientApp/src/app/offer/offer-add/offer-add.component.css
@@ -2,10 +2,6 @@
   width: 100%;
 }
 
-input {
-  text-align: right;
-}
-
 mat-tab-group {
   min-height: 100%;
 }
